# langchain-dynamic-workflow

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_zh.md  pyproject.toml
.claude/rules/: docstring.md  python_general.md  testing.md
.claude/skills/github-pr/: SKILL.md
.claude/skills/github-pr/references/: visual-explainer-template.html  (+1 more)
.claude/workflows/: README.md  dev-master-orchestrator.js  ldw-phase-runner.js
.github/workflows/: ci.yml  pr-artifact-cleanup.yml
demo-app/: README.md  scenarios.json
demo-app/backend/: .env.example  _meta_fixtures.py  _models.py  host_graph.py  langgraph.json  pyproject.toml  pyrightconfig.json  ui_adapter.py  ui_bridge.py  workflows.py
demo-app/backend/tests/: test_background.py  test_doc_sync.py  test_drill_run.py  test_e2e_real.py  test_fix_loop.py  test_host_graph.py  test_key_resolution.py  test_m35_run_board_real.py  test_m3_transport_real.py  test_m4_signoff_real.py  test_m5_fix_loop_real.py  test_m6_refactor_swarm_real.py  test_meta_layer.py  test_refactor_swarm.py  test_runs_board.py  test_sign_off.py  test_ui_adapter.py  test_ui_bridge.py  test_web_and_cache.py  test_workflows.py
demo-app/frontend/: .env  .gitignore  UPSTREAM.md
design_docs/: 01-engine-mechanism.md  02-architecture.md  03-authoring-patterns.md  README.md
design_docs/plans/: 00-0.1.0-roadmap.md  00-v1.0-roadmap.md  01-phase-1-core-vertical-slice.md  02-phase-2-fanout.md  03-phase-3-determinism-budget.md  04-phase-4-sandbox.md  05-phase-5-outward-form.md  06-phase-6-0.1.0-capstone.md  06-phase-6-v1.0-capstone.md
design_docs/uml/: 01-component.md  02-class.md  03-sequence.md  README.md
design_docs/v0_1_0_plans/: 00-0.1.0-roadmap.md  05-phase-5-outward-form.md
design_docs/v0_2_0_plans/: 00-roadmap.md  01-g1-agent-schema-structured-output.md  02-g3-skill-pattern-library.md  03-g2-worktree-isolation.md  04-g4-readonly-judge.md
design_docs/v0_3_0_plans/: 00-roadmap.md  01-f-cross-leaf-reduce.md  02-b-journaled-race.md  03-m3.5-run-observability.md  04-m3-cross-session-persistence.md  05-m4-c-in-run-hitl.md  06-m6-i-real-git-worktree.md  07-m7-h-topo-fanout-nesting.md
design_docs/v0_4_0_plans/: 00-roadmap.md  01-leaf-live-observability.md  02-e-batch-ergonomics.md  03-background-run-transport-and-m3.md
examples/: 01_single_agent.py  02_fanout.py  03_loop_until_budget.py  04_sandbox_artifacts.py  05_host_agent_workflow.py  06_capstone.py  07_deep_research_real_e2e.py  08_meta_layer_run_script.py  09_quality_patterns.py  10_worktree_fix_swarm.py  11_readonly_judge_real_e2e.py  12_screening_reconcile_real_e2e.py  13_ai_sre_race_real_e2e.py  14_parallel_runs_observability.py  15_cross_session_persistence.py  AGENTS.md  __init__.py  _demo_models.py  _prompt_caching.py
examples/_shared/: __init__.py  offline_models.py  real_models.py
examples/features/: __init__.py  agent_and_schema.py  ast_gate.py  budget.py  bug_vuln_sweep.py  dag.py  git_worktree.py  host_integration.py  journal_resume.py  nesting.py  observability.py  parallel.py  persistence.py  pipeline.py  race.py  readonly_judge.py  reduce.py  sandbox.py  signoff.py  worktree.py
examples/flagship/: __init__.py  deep_research_authored.py  deep_research_preset.py
research/: 2026-06-01-claude-code-dynamic-workflows-reverse-engineering.md  2026-06-01-langchain-deepagents-substrate.md  2026-06-01-microsoft-promptflow-architecture-study.md
research/_data/: 2026-06-01-findings-and-verification.json  2026-06-01-promptflow-findings-and-verification.json  2026-06-01-substrate-findings-and-verification.json
src/langchain_dynamic_workflow/: __init__.py  _ast_gate.py  _background.py  _budget.py  _codegen.py  _concurrency.py  _context.py  _dag.py  _determinism.py  _engine.py  _errors.py  _git_worktree.py  _journal.py  _leaf_events.py  _leaves.py  _local_subprocess.py  _observability.py  _persistence.py  _pipeline.py  _progress.py  _pull_request.py  _race_types.py  _reduce.py  _result.py  _roster.py  _run_store.py  _sandbox.py  _schema.py  _workflows.py  _worktree.py  middleware.py  tool.py
src/langchain_dynamic_workflow/skills/: __init__.py
tests/: conftest.py  test_import_contracts.py  test_smoke.py
tests/integration/: _cross_process_worker.py  test_ai_sre_race.py  test_background_transport.py  test_batch_map.py  test_batch_map_real_model.py  test_bug_vuln_sweep.py  test_cross_process_resume.py  test_dag_doc_generation.py  test_examples_offline_models.py  test_g1_schema.py  test_git_worktree_swarm.py  test_hitl_background.py  test_hitl_signoff.py  test_leaf_observability.py  test_leaf_observability_real.py  test_phase1_single_agent.py  test_phase2_fanout.py  test_phase3_budget.py  test_phase3_determinism.py  test_phase3_determinism_concurrency.py  test_phase3_determinism_fanout.py  test_phase3_loop_until_budget.py  test_phase3_progress.py  test_phase4_sandbox.py  test_phase5_host_agent_workflow.py  test_phase6_capstone.py  test_phase6_observability.py  test_phase7_deep_research.py  test_phase8_meta_layer.py  test_quality_patterns.py  test_race.py  test_readonly_judge.py  test_real_execution.py  test_real_execution_real_model.py  test_run_observability.py  test_screening_reconcile.py  test_tool_sqlite_resume.py  test_worktree_fix_swarm.py  test_worktree_isolation.py
tests/unit/: test_agent_schema.py  test_ast_gate.py  test_background.py  test_background_events.py  test_budget.py  test_codegen.py  test_concurrency.py  test_context_batch_map.py  test_context_pipeline.py  test_dag.py  test_determinism.py  test_errors.py  test_git_worktree.py  test_journal.py  test_journal_key_stability.py  test_leaf_events.py  test_local_subprocess.py  test_loop_until.py  test_middleware.py  test_nesting.py  test_observability.py  test_parallel.py  test_persistence.py  test_pipeline.py  test_progress.py  test_pull_request.py  test_race.py  test_race_types.py  test_readonly_leaf.py  test_reduce.py  test_result.py  test_roster.py  test_run_store.py  test_sandbox.py  test_schema.py  test_shared_handoff.py  test_skill_patterns.py  test_skills.py  test_tool.py  test_workflows.py  (+1 more)
(+24 files in other folders)
