[project]
name = "langchain-dynamic-workflow"
version = "0.0.1"
description = "Deterministic, scripted, resumable multi-agent orchestration for LangChain deepagents — a community port of Claude Code's Dynamic Workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "PanQiWei" }]
keywords = [
    "langchain",
    "langgraph",
    "deepagents",
    "agents",
    "multi-agent",
    "workflow",
    "orchestration",
    "durable-execution",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.0",
    "deepagents>=0.6",
    "pydantic>=2.7",
]

# NOTE: adjust the org/owner once the GitHub repository is created.
[project.urls]
Homepage = "https://github.com/OWNER/langchain-dynamic-workflow"
Repository = "https://github.com/OWNER/langchain-dynamic-workflow"
Issues = "https://github.com/OWNER/langchain-dynamic-workflow/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_dynamic_workflow"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["langchain_dynamic_workflow"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
