[project]
name = "langchain-dynamic-workflow"
version = "0.0.1"
description = "Deterministic, scripted, resumable multi-agent orchestration for LangChain deepagents — a community port of Claude Code's Dynamic Workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "PanQiWei" }]
keywords = [
    "langchain",
    "langgraph",
    "deepagents",
    "agents",
    "multi-agent",
    "workflow",
    "orchestration",
    "durable-execution",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.0",
    "deepagents>=0.6",
    "pydantic>=2.7",
]

# NOTE: adjust the org/owner once the GitHub repository is created.
[project.urls]
Homepage = "https://github.com/OWNER/langchain-dynamic-workflow"
Repository = "https://github.com/OWNER/langchain-dynamic-workflow"
Issues = "https://github.com/OWNER/langchain-dynamic-workflow/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "import-linter>=2.11",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_dynamic_workflow"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["langchain_dynamic_workflow"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# langgraph / deepagents ship partial inline types without separate stubs;
# silence the third-party stub-absence noise while keeping strict on our code.
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage runs on every `uv run pytest`: the engine measures the source package
# and the run fails if total line coverage drops below the gate (see
# [tool.coverage.report] fail_under). The core orchestration paths (agent /
# parallel / pipeline / journal / resume / background) are integration-tested, so
# the gate guards against an untested regression sliding in.
addopts = "-ra --cov=langchain_dynamic_workflow --cov-report=term-missing"

[tool.coverage.run]
branch = false
source = ["src/langchain_dynamic_workflow"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
# Core-module line coverage must stay at or above 85%. Total currently sits well
# above this; the floor catches a regression that strips out tested paths.
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# import-linter: mechanically guard the locked three-layer architecture so the
# one-directional dependency (Layer 2 host-facing -> Layer 1 orchestration runtime
# -> Layer 0 substrate binding) cannot silently rot. Run with `uv run lint-imports`.
[tool.importlinter]
root_packages = ["langchain_dynamic_workflow"]
# Required because a contract forbids an external package (langgraph).
include_external_packages = true

# Layer 2 (host-facing surface) reaches the engine only through the public core
# entry (`run_workflow` in _engine) plus the public registries. It must never
# reach into the deep orchestration internals — journal, budget, determinism,
# pipeline, concurrency, sandbox, progress, context. Those are Layer 0/1 mechanics
# behind the `run_workflow` wall; a tool/middleware import of them would couple the
# agent-facing surface to engine internals and break the one-directional boundary.
[[tool.importlinter.contracts]]
name = "Layer 2 host-facing must not reach Layer 0/1 engine internals"
type = "forbidden"
# Only direct imports are forbidden: the host-facing surface legitimately reaches
# the engine through the public `run_workflow` entry (which transitively pulls in
# every internal), so the boundary we mechanically guard is "no *direct* reach-in".
allow_indirect_imports = "true"
source_modules = [
    "langchain_dynamic_workflow.tool",
    "langchain_dynamic_workflow.middleware",
    "langchain_dynamic_workflow._background",
]
forbidden_modules = [
    "langchain_dynamic_workflow._journal",
    "langchain_dynamic_workflow._budget",
    "langchain_dynamic_workflow._determinism",
    "langchain_dynamic_workflow._pipeline",
    "langchain_dynamic_workflow._concurrency",
    "langchain_dynamic_workflow._sandbox",
    "langchain_dynamic_workflow._progress",
    "langchain_dynamic_workflow._context",
]

# The roster (leaf resolution) and the determinism guard are deliberately
# substrate-agnostic: they must never import LangGraph internals. Coupling leaf
# resolution or the determinism oracle to LangGraph would leak the substrate up
# into layers that are meant to stay portable across it.
[[tool.importlinter.contracts]]
name = "Roster and determinism guard stay free of LangGraph internals"
type = "forbidden"
source_modules = [
    "langchain_dynamic_workflow._roster",
    "langchain_dynamic_workflow._determinism",
]
forbidden_modules = ["langgraph"]

# The background run substrate is a pure host-turn mechanism (asyncio task
# lifecycle + result offload + notice queue). It must stay independent of the
# orchestration engine, so the dependency runs engine-consumer (tool) -> background,
# never background -> engine.
[[tool.importlinter.contracts]]
name = "Background run substrate stays independent of the engine"
type = "forbidden"
source_modules = ["langchain_dynamic_workflow._background"]
forbidden_modules = ["langchain_dynamic_workflow._engine"]
