[project]
name = "langchain-dynamic-workflow"
version = "0.3.0"
description = "Deterministic, scripted, resumable multi-agent orchestration for LangChain deepagents — a community port of Claude Code's Dynamic Workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "PanQiWei" }]
keywords = [
    "langchain",
    "langgraph",
    "deepagents",
    "agents",
    "multi-agent",
    "workflow",
    "orchestration",
    "durable-execution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.0",
    "deepagents>=0.6",
    "pydantic>=2.7",
]

# Cross-session / cross-process persistence. Opt-in so the base install stays
# dependency-free and behavior-identical with the in-memory default. Pulls
# langgraph-checkpoint-sqlite (AsyncSqliteSaver) and aiosqlite (autocommit + WAL
# store); transitively brings langgraph-checkpoint>=4.1,<5 and sqlite-vec (a
# compiled extension). Install with `uv sync --extra sqlite` or
# `pip install langchain-dynamic-workflow[sqlite]`.
[project.optional-dependencies]
sqlite = ["langgraph-checkpoint-sqlite>=3.1,<4", "aiosqlite>=0.22"]

# NOTE: adjust the org/owner once the GitHub repository is created.
[project.urls]
Homepage = "https://github.com/OWNER/langchain-dynamic-workflow"
Repository = "https://github.com/OWNER/langchain-dynamic-workflow"
Issues = "https://github.com/OWNER/langchain-dynamic-workflow/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "import-linter>=2.11",
    "pytest-cov>=7.1.0",
    # Mirror the [sqlite] extra into the dev group so a local `uv sync` installs
    # the persistence backends — pyright (strict) and pytest then check and run
    # _persistence.py for real rather than skipping it as an absent optional dep.
    "langgraph-checkpoint-sqlite>=3.1,<4",
    "aiosqlite>=0.22",
]
# Optional extras for driving the runnable examples against a real model with
# tracing. The examples run fully offline with fake models on the base install;
# install this group (`uv sync --group example`) to exercise the live path.
# python-dotenv loads credentials from a local .env; langchain-openrouter routes
# real deepagent leaves through OpenRouter; langsmith captures the run traces
# (auto-enabled from LANGSMITH_* env vars — already a transitive dep, pinned here
# to make the tracing dependency explicit).
example = [
    "python-dotenv>=1.0",
    "langchain-openrouter>=0.2",
    "langsmith>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_dynamic_workflow"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["langchain_dynamic_workflow"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# langgraph / deepagents ship partial inline types without separate stubs;
# silence the third-party stub-absence noise while keeping strict on our code.
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the repo root on sys.path so tests can import the runnable `examples`
# package directly (e.g. `from examples._shared.offline_models import ...`).
# --import-mode=importlib does not prepend rootdir to sys.path, and the bare
# `pytest` entrypoint (unlike `python -m pytest`) does not add cwd, so this is
# required for the example-loading integration tests to resolve the package.
pythonpath = ["."]
# Coverage runs on every `uv run pytest`: the engine measures the source package
# and the run fails if total line coverage drops below the gate (see
# [tool.coverage.report] fail_under). The core orchestration paths (agent /
# parallel / pipeline / journal / resume / background) are integration-tested, so
# the gate guards against an untested regression sliding in.
# --import-mode=importlib lets same-basename test modules coexist across the unit
# and integration trees (e.g. tests/unit/test_race.py and
# tests/integration/test_race.py) without sys.path-prepend collisions and without
# sprinkling __init__.py files through the test trees.
addopts = "-ra --import-mode=importlib --cov=langchain_dynamic_workflow --cov-report=term-missing"

[tool.coverage.run]
branch = false
source = ["src/langchain_dynamic_workflow"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
# Core-module line coverage must stay at or above 85%. Total currently sits well
# above this; the floor catches a regression that strips out tested paths.
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# import-linter: mechanically guard the locked three-layer architecture so the
# one-directional dependency (Layer 2 host-facing -> Layer 1 orchestration runtime
# -> Layer 0 substrate binding) cannot silently rot. Run with `uv run lint-imports`.
[tool.importlinter]
root_packages = ["langchain_dynamic_workflow"]
# Required because a contract forbids an external package (langgraph).
include_external_packages = true

# Layer 2 (host-facing surface + meta-layer codegen) reaches the engine only
# through the public core entry (`run_workflow` in _engine) plus the public
# registries. It must never reach into the deep orchestration internals — journal,
# budget, determinism, pipeline, concurrency, sandbox, progress, context. Those are
# Layer 0/1 mechanics behind the `run_workflow` wall; a tool/middleware/codegen
# import of them would couple the agent-facing surface to engine internals and
# break the one-directional boundary.
[[tool.importlinter.contracts]]
name = "Layer 2 host-facing must not reach Layer 0/1 engine internals"
type = "forbidden"
# Only direct imports are forbidden: the host-facing surface legitimately reaches
# the engine through the public `run_workflow` entry (which transitively pulls in
# every internal), so the boundary we mechanically guard is "no *direct* reach-in".
allow_indirect_imports = "true"
source_modules = [
    "langchain_dynamic_workflow.tool",
    "langchain_dynamic_workflow.middleware",
    "langchain_dynamic_workflow._background",
    "langchain_dynamic_workflow._codegen",
    "langchain_dynamic_workflow._run_store",
    "langchain_dynamic_workflow._persistence",
]
forbidden_modules = [
    "langchain_dynamic_workflow._journal",
    "langchain_dynamic_workflow._budget",
    "langchain_dynamic_workflow._determinism",
    "langchain_dynamic_workflow._pipeline",
    "langchain_dynamic_workflow._concurrency",
    "langchain_dynamic_workflow._sandbox",
    "langchain_dynamic_workflow._progress",
    "langchain_dynamic_workflow._context",
]

# The roster (leaf resolution), the determinism guard, and the AST security gate
# are deliberately substrate-agnostic: they must never import LangGraph internals.
# Coupling leaf resolution, the determinism oracle, or the meta-layer security
# wall to LangGraph would leak the substrate up into layers that are meant to stay
# portable across it.
[[tool.importlinter.contracts]]
name = "Roster, determinism guard, and AST gate stay free of LangGraph internals"
type = "forbidden"
source_modules = [
    "langchain_dynamic_workflow._roster",
    "langchain_dynamic_workflow._determinism",
    "langchain_dynamic_workflow._ast_gate",
]
forbidden_modules = ["langgraph"]

# The background run substrate is a pure host-turn mechanism (asyncio task
# lifecycle + result offload + notice queue). It must stay independent of the
# orchestration engine, so the dependency runs engine-consumer (tool) -> background,
# never background -> engine.
[[tool.importlinter.contracts]]
name = "Background run substrate stays independent of the engine"
type = "forbidden"
source_modules = ["langchain_dynamic_workflow._background"]
forbidden_modules = ["langchain_dynamic_workflow._engine"]

# The sqlite persistence backend lives behind the optional `[sqlite]` extra, so it
# must never be pulled in by merely importing the package or the engine: a base
# install without the extra would then fail at import time. Importing `_persistence`
# is the deliberate, lazy act of a host that opted into sqlite (the package exposes
# `SqliteWorkflowStore` only through a TYPE_CHECKING hint + a lazy `__getattr__`).
# The sources are the runtime modules a bare `import langchain_dynamic_workflow`
# eagerly loads — the engine plus the host-facing surface and run-store — none of
# which may reach `_persistence`. `allow_indirect_imports` stays at its default so
# the whole reachable import graph from each source is checked, catching an eager
# reach through any chain. The package root itself is intentionally not a source:
# its only references to `_persistence` are the lazy paths above, and sourcing the
# root subtree would both wrongly count those and overlap the forbidden module.
[[tool.importlinter.contracts]]
name = "Package and engine must not eagerly import the optional sqlite backend"
type = "forbidden"
source_modules = [
    "langchain_dynamic_workflow._engine",
    "langchain_dynamic_workflow._run_store",
    "langchain_dynamic_workflow._codegen",
    "langchain_dynamic_workflow._background",
    "langchain_dynamic_workflow.tool",
    "langchain_dynamic_workflow.middleware",
]
forbidden_modules = ["langchain_dynamic_workflow._persistence"]
